welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:8: error: '<-' expected but ',' found.
		for(j,k <- 0 to y-1){
                     ^ZigZag:12: error: illegal start of simple expression
			}
                        ^